tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_character_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo =
  | 'h' => 0
  | 'i' => 1
  | 'i' => 1
  | _ => 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_character_1.kk:4:5
  │
4 │   | 'i' => 1
  │     ^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
